force-app/main/default/objects/APEX_Candidate__c/APEX_Candidate__c.object-meta.xml
<CustomObject>
    <description>This object contain candidate detail</description>
    <label>Candidate</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>