force-app/main/default/objects/APEX_Candidate__c/fields/APEX_State__c.field-meta.xml
<CustomField>
    <fullName>APEX_State__c</fullName>
    <description>This is a dependency field</description>
    <inlineHelpText>Select country first</inlineHelpText>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>APEX_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>Christmas Island</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Gujrat</fullName>
            </value>
            <value>
                <fullName>Madhyapradesh</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Michigan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>