force-app/main/default/objects/APEX_Candidate__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>application submission date</description>
    <inlineHelpText>select date</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>