force-app/main/default/objects/APEX_Candidate__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Date of Birth Field</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>