force-app/main/default/objects/APEX_Candidate__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>This is first name field</description>
    <inlineHelpText>enter up to 15 char only</inlineHelpText>
    <label>First Name</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>