force-app/main/default/objects/APEX_Candidate__c/fields/Jobs__c.field-meta.xml
<CustomField>
    <fullName>Jobs__c</fullName>
    <description>It should be able to relate a candidate to a job</description>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>