force-app/main/default/objects/APEX_Candidate__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>last name field</description>
    <inlineHelpText>enter last name max 15 char</inlineHelpText>
    <label>Last Name</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>