force-app/main/default/objects/APEX_Candidate__c/validationRules/FirstNameLength.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameLength</fullName>
    <active>true</active>
    <description>Allow to enter first name only 10 char</description>
    <errorConditionFormula>$Setup.Validation_Handler__c.EnalbeCandidateValidation__c &amp;&amp;  $ObjectType.APEX_Candidate__c.Fields.First_Name__c !=&apos;Mr&apos;</errorConditionFormula>
    <errorMessage>cannot enter first name as Mr</errorMessage>
</ValidationRule>