force-app/main/default/objects/APEX_Candidate__c/listViews/My_Demo_View.listView-meta.xml
<ListView>
    <fullName>My_Demo_View</fullName>
    <columns>NAME</columns>
    <columns>Expected_Salary__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Jobs__c</columns>
    <columns>Salutation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
    </filters>
    <label>My Demo View</label>
</ListView>